# juris-scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: lawsuits.py
app/core/: config.py  database.py
app/models/: models.py
app/normalizers/: datajud.py  utils.py
app/repositories/: lawsuit.py
app/schemas/: requests.py  responses.py  schemas.py
app/scrapers/: base.py  consulta_processual.py  datajud.py
app/services/: collect.py
migrations/: env.py
migrations/versions/: d915563fcf41_create_initial_tables.py
